Bug#39846, "Falcon: Concurrent online alter causes assertion in SRLUpdateIndex::append()"