storage/falcon/DeferredIndex.cpp
@@ -819,7 +819,7 @@ void DeferredIndex::scanIndex(IndexKey *lowKey, IndexKey *highKey, int searchFla
 void DeferredIndex::detachIndex(void)
 {
 	Sync sync(&syncObject, "DeferredIndex::detachIndex");
-	sync.lock(Shared);
+	sync.lock(Exclusive); // was Shared
 	index = NULL;
 }
 
